# Chess-Engine2

./: .gitignore  README.md
ChessEngine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
ChessEngine/BoardRepresentation/: board.cpp  board.h  movegenerator.cpp  movegenerator.h  zobrist.cpp  zobrist.h
ChessEngine/Evaluation/: evaluation.cpp  evaluation.h
ChessEngine/Search/: search.cpp  search.h
